# multicloud-oracle-aidb-weekly-brief

./: .gitignore  README.md  pyproject.toml  weekly-multicloud-announcements-and-innovations-2026-06-15-redwood.pptx  weekly_multicloud_oracle_db_ai_brief_2026-06-12.html
docs/: local-cli.md
outputs/manual-20260612-redwood-ppt/presentations/multicloud-announcements/: build-deck.mjs  capture-official-assets.mjs  claim-spine.txt  contact-sheet-plan.txt  design-system.txt  patch-pptx-hyperlinks.py  profile-plan.txt  source-notes.txt
outputs/manual-20260612-redwood-ppt/presentations/multicloud-announcements/assets/: aws-amazon-com-inspect.json  azure-microsoft-com-inspect.json  cloud-google-com-inspect.json  redwood-reference.txt  www-oracle-com-cloud-inspect.json
outputs/manual-20260612-redwood-ppt/presentations/multicloud-announcements/output/: artifact-build-manifest.json  weekly-multicloud-announcements-and-innovations-redwood.pptx
outputs/manual-20260612-redwood-ppt/presentations/multicloud-announcements/slides/: slide-01.mjs  slide-02.mjs  slide-03.mjs  slide-04.mjs  slide-05.mjs  (+6 more)
skills/create-multicloud-oracle-aidb-brief/: SKILL.md
skills/create-multicloud-oracle-aidb-brief/agents/: openai.yaml
skills/create-multicloud-oracle-aidb-brief/references/: weekly-brief-prompt.md
skills/create-multicloud-oracle-db-brief/: SKILL.md
skills/create-multicloud-oracle-db-brief/agents/: openai.yaml
src/multicloud_aidb_brief/: __init__.py  brief_data.py  cli.py  deck.py  pptx_writer.py  verify.py
tools/: mail_config.example.env  send_weekly_brief_email.py
(+10 files in other folders)
