[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multicloud-oracle-aidb-weekly-brief"
version = "0.1.0"
description = "Portable CLI for generating Oracle AI Database multicloud weekly briefs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sujoy Nath" }
]
license = { text = "MIT" }
keywords = ["oracle", "multicloud", "powerpoint", "brief", "agentic-ai"]
dependencies = []

[project.scripts]
multicloud-aidb-brief = "multicloud_aidb_brief.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
